Making the project look good

--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,101 +1,105 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-    
-    body {
-        font-family: 'Roboto', sans-serif;
-        background-color: #f5f5f5;
-    }
-    
-    .Header {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 3px;
-    }
-    
-    .Header nav {
-       
-        width: 100%;
-        height: 60px;
-        background-image: linear-gradient(to right, #2ecc71, #3498db);
-        color: #fff;
-        text-align: center;
-        font-size: 20px;
-    }
-    
-    ul {
-        list-style: none;
-        display: flex;
-        justify-content: space-around;
-        font-weight: bold;
-    }
+body {
+  font-family: "Roboto", sans-serif;
+  background-color: #f5f5f5;
+}
+a{
+  text-decoration: none;
+}
 
-        
-    p{
-        font-size: 1em; 
-        margin-right: 400px ;
-         padding: 5px;
-        background-attachment: fixed;
-        /* max-height: 100%; */
-        /* width:150px;
+.Header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3px;
+}
+
+.Header nav {
+  width: 100%;
+  height: 60px;
+  background-image: linear-gradient(to right, #2ecc71, #3498db);
+  color: #fff;
+  text-align: center;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+}
+.Header ul{
+  align-items: center;
+  height: 60px;
+}
+.Header ul li{
+  height: 100%;
+}
+.Header ul li{
+  display: flex;
+  align-items: center;
+}
+
+ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-around;
+  font-weight: bold;
+}
+
+p {
+  font-size: 1em;
+  margin-right: 400px;
+  padding: 5px;
+  background-attachment: fixed;
+  /* max-height: 100%; */
+  /* width:150px;
         border-radius: 50%; */
-        color: #1bd685;
-        
-    }
-    span{
-       
-        background-image: linear-gradient(to right, #1dc0af,black);
-        color: white;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      height: 120px;
-      width: 100px;
-      border-radius:50% ;
-     border: 1px solid black;
+  color: #1bd685;
+}
+span {
+  background-image: linear-gradient(to right, #1dc0af, black);
+  color: white;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  height: 120px;
+  width: 100px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
 
-      }
+li {
+  margin: 0 15px;
+  position: relative;
+}
 
-       
-      
+li:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 110%;
+  bottom: 0;
+  width: 2px;
+  background-color: #fff;
+  margin: 0 5px;
+}
 
-    
-    li {
-        margin: 0 15px;
-        position: relative;
-    }
-    
-    li:not(:last-child)::after {
-        content: '';
-        position: absolute;
-        top: 0;
-        right: -30px; 
-        bottom: 0;
-        width: 2px; 
-        background-color: #fff; 
-        margin: 0 5px; 
-       margin-top: 4px;
+li a {
+  transition: color 0.3s ease-in-out;
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  padding: 5px;
+}
 
-    }
-    
-    li a {
-        transition: color 0.3s ease-in-out;
-        color: #fff;
-        text-decoration: none;
-        display: block; 
-        padding: 5px;
-    }
-    
-    li:hover:not(:last-child)::after {
-        background-color: #1821a3; 
-    }
-    
-    li a:hover {
-        color: #1821a3;
-    }
-    
-       
-      
+li:hover:not(:last-child)::after {
+  background-color: #1821a3;
+}
+
+li a:hover {
+  color: #1821a3;
+}
