--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -6,12 +6,12 @@
 
 
 .footer{
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     width:100%;
     height:42px; /* Height of the footer */
     background-image: linear-gradient(to right, #2ecc71, #3498db);
-    margin-top: 140px;
+     margin-top: 140px; 
     padding: 10px;
     
 }
