--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -23,9 +23,10 @@
         width: 100%;
         height: 60px;
         background-image: linear-gradient(to right, #2ecc71, #3498db);
-        color: #fff;
+        color: #0b636b;
         text-align: center;
         font-size: 20px;
+       
     }
     
     ul {
@@ -37,25 +38,31 @@
 
         
     p{
-        font-size: 1em; 
-        margin-right: 400px ;
+        font-size: 1.1em; 
+        margin-right: 350px ;
          padding: 5px;
+         margin-top: 10px;
+           
         background-attachment: fixed;
-        /* max-height: 100%; */
-        /* width:150px;
-        border-radius: 50%; */
+       
+        
         color: #1bd685;
+       
         
     }
-    span{
+    .logo{
        
-        background-image: linear-gradient(to right, #1dc0af,black);
-        color: white;
+         background-image: linear-gradient(to right, #1dc0af,black);  
+        color: rgb(23, 208, 134);
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      height: 120px;
+      height: 100px;
       width: 100px;
-      border-radius:50% ;
-     border: 1px solid black;
+      padding: 9px;
+    
+   border-radius:50% ;  
+     border-bottom: 5px solid black;
+      border-top: 5px solid green; 
+     
 
       }
 
@@ -66,9 +73,11 @@
     li {
         margin: 0 15px;
         position: relative;
+        
     }
     
     li:not(:last-child)::after {
+       
         content: '';
         position: absolute;
         top: 0;
@@ -87,6 +96,9 @@
         text-decoration: none;
         display: block; 
         padding: 5px;
+        filter: drop-shadow(-3px -3px rgba(225,225,225,0,3)),
+        5px 5px 5px rgba(0,0,0, 0,2),
+        15px 15px rgba(0,0, 0,0,2); 
     }
     
     li:hover:not(:last-child)::after {
