--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -49,10 +49,11 @@
         border: none;
         letter-spacing: 2px;
         font-size: 20px;
-        border-bottom: 2.5px solid rgb(131, 33, 33); 
+        border-bottom: 2.5px solid rgb(16, 179, 68); 
         border-radius: 4px;
         margin-left:330px ;
         margin-top: 50px;
+        /* background-image: linear-gradient(to right, #254dac,rgb(25, 154, 83)); */
 
         &:hover{
             transition: all 0.5s ease;
@@ -168,8 +169,8 @@
  
  
 .swiper_container{
-    width:400px;
-    height:400px;
+    width:350px;
+    height:350px;
     overflow: hidden;
     cursor: pointer;
     position: relative;
