--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -53,7 +53,7 @@
     .logo{
        
          background-image: linear-gradient(to right, #1dc0af,black);  
-        color: rgb(23, 208, 134);
+        color: white;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
       height: 100px;
       width: 100px;
