--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -7,7 +7,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 64px);
+    height: calc(179vh - 64px);
     margin-left:30px ;
     }
 .about-section{
@@ -38,11 +38,14 @@
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
-   max-width: 350px;
+   max-width: 300px;
    margin-right: 60px;
+   margin-bottom: 290px;
+   box-shadow: 10px 10px 5px black;
+   border-radius: 10px;
   
 
-    height: 50%;
+    height: 30%;
     overflow: hidden;
    
     }
