--- a/src/Components/style.css
+++ b/src/Components/style.css
@@ -1,4 +1,4 @@
-/* #app { height: 100% } */
+/* #app { height: 100% }
 html,
 body {
   position: relative;
@@ -51,4 +51,4 @@ body {
 .swiper-slide .text {
   font-size: 14px;
   /* line-height: 1.3; */
-}
+/* }  */
