--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -13,5 +13,6 @@
     background-image: linear-gradient(to right, #2ecc71, #3498db);
      /* margin-top: 140px;  */
     padding: 10px;
-    
+    /* line-height: 60px;
+     */
 }
