--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -23,10 +23,12 @@
         width: 100%;
         height: 60px;
         background-image: linear-gradient(to right, #2ecc71, #3498db);
-        color: #0b636b;
+        color:white;
+        background-color: #fff;
         text-align: center;
         font-size: 20px;
-       
+        
+        
     }
     
     ul {
@@ -35,71 +37,74 @@
         justify-content: space-around;
         font-weight: bold;
     }
-
-        
-    p{
-        font-size: 1.1em; 
-        margin-right: 350px ;
-         padding: 5px;
-         margin-top: 10px;
-           
-        background-attachment: fixed;
-       
-        
-        color: #1bd685;
-       
-        
-    }
+    
+    
+    
     .logo{
-       
-         background-image: linear-gradient(to right, #1dc0af,black);  
+        
+        background-image: linear-gradient(to right, #1dc0af,black);  
         color: white;
         font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-      height: 100px;
-      width: 100px;
-      padding: 9px;
-    
-   border-radius:50% ;  
-     border-bottom: 5px solid black;
-      border-top: 5px solid green; 
-     
-
-      }
-
-       
-      
-
-    
-    li {
-        margin: 0 15px;
-        position: relative;
+        height: 100px;
+        width: 100px;
+        padding: 9px;
+        
+        border-radius:50% ;  
+        border-bottom: 5px solid black;
+        border-top: 5px solid green; 
+        
         
     }
     
-    li:not(:last-child)::after {
+    .navs{
+        margin-left: 550px;
+        color: #f5f5f5;
+        font-size: 20px;
+        padding: 20px;
+    }
+    /* .navs:hover{
+        transition: all .5s ease; */
+        
+        
+        
+        
+        /* } */
+        .logohead{
+            margin-left: 17px;
+        }
+        
+        /* li {
+            margin: 0 15px;
+            position: relative;
+            color: #f5f5f5;
+            line-height: 60px; */
+        
+    /* } */
+    
+    /* li:not(:last-child)::after {
        
         content: '';
         position: absolute;
         top: 0;
-        right: -30px; 
-        bottom: 0;
+        /* right: -15px;  */
+        /* bottom: 0;
         width: 2px; 
         background-color: #fff; 
         margin: 0 5px; 
-       margin-top: 4px;
+       margin-top: 4px; */ 
 
-    }
+    /* } */
     
-    li a {
+    /* /* li a {
         transition: color 0.3s ease-in-out;
         color: #fff;
         text-decoration: none;
-        display: block; 
-        padding: 5px;
-        filter: drop-shadow(-3px -3px rgba(225,225,225,0,3)),
+        display: block;  */
+        /* padding: 5px;
+       adow(-3px -3px rgba(225,225,225,0,3)),
         5px 5px 5px rgba(0,0,0, 0,2),
-        15px 15px rgba(0,0, 0,0,2); 
-    }
+        15px 15px rgba(0,0, 0,0,2);  filter: drop-sh
+    } */
     
     li:hover:not(:last-child)::after {
         background-color: #1821a3; 
@@ -109,5 +114,5 @@
         color: #1821a3;
     }
     
-       
+    
       
