--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -56,63 +56,49 @@
         
     }
     
+   
     .navs{
         margin-left: 550px;
-        color: #f5f5f5;
         font-size: 20px;
         padding: 20px;
+      
+        position: relative;
+        line-height: 60px;
     }
-    /* .navs:hover{
-        transition: all .5s ease; */
-        
-        
-        
-        
-        /* } */
+    .navcollaps{
+        float:right;
+   
+   
+
+}
+.navlink{
+    color:#fff;
+    position: relative;
+} 
+
+.navlink::after{
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    height: 60px; 
+    width: 0;
+     
+    transition: width 0.3s ease-in-out
+}
+
+.navlink:hover{
+    color: #4923a1;
+    
+}
+      
+.custom-dropdown-title {
+    color:#fff ;
+}
+   
         .logohead{
             margin-left: 17px;
         }
         
-        /* li {
-            margin: 0 15px;
-            position: relative;
-            color: #f5f5f5;
-            line-height: 60px; */
-        
-    /* } */
-    
-    /* li:not(:last-child)::after {
-       
-        content: '';
-        position: absolute;
-        top: 0;
-        /* right: -15px;  */
-        /* bottom: 0;
-        width: 2px; 
-        background-color: #fff; 
-        margin: 0 5px; 
-       margin-top: 4px; */ 
-
-    /* } */
-    
-    /* /* li a {
-        transition: color 0.3s ease-in-out;
-        color: #fff;
-        text-decoration: none;
-        display: block;  */
-        /* padding: 5px;
-       adow(-3px -3px rgba(225,225,225,0,3)),
-        5px 5px 5px rgba(0,0,0, 0,2),
-        15px 15px rgba(0,0, 0,0,2);  filter: drop-sh
-    } */
-    
-    li:hover:not(:last-child)::after {
-        background-color: #1821a3; 
-    }
-    
-    li a:hover {
-        color: #1821a3;
-    }
-    
-    
-      
+   
