--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -15,10 +15,14 @@ body{
     
     
 }
+.login-header{
+    font-family: "italic";
+    color:#31846f;
+}
 
 .section{
      
-    /* flex-basis: 30%;  */
+     /* flex-basis: 30%;   */
   /* /text-align: right; */
   color: #efefef;
   font-size: 90px;
@@ -57,16 +61,21 @@ body{
     border-radius: 5px; 
     width: 500px;
     height: 30px;
+    margin: 20px;
+   
 
 }
 
 .input-container label {
     position: absolute;
-      bottom:95%; 
-    left: 0;
+       /* bottom:20%;   */
+    /* left: 20px; */
+    right: 350px;
+    /* bottom: 20px; */
+
     transform: translateY(-50%) translateX(0.625rem);
     color: #efefef;
-    padding-inline: 0.25rem;
+    /* padding-inline: 0.25rem; */
     font-size: 0.875rem;
     pointer-events: none;
     z-index: 999;
@@ -134,13 +143,13 @@ form {
 
 button {
       margin-top: 7px; 
-    padding: 0.625rem 1rem;
+    /* padding: 0.625rem 1rem; */
     background-color: #1a27bc;
     color: #fff;
     border: none;
     cursor: pointer;
     transition: background-color 0.3s;
-     border-radius: 5px; 
+     border-radius: 15px; 
     /* margin-bottom: 95px; */
     width: 500px;
 }
@@ -151,8 +160,8 @@ button:hover {
 
 .password-toggle{
     position: absolute;
-     top: 5px; 
-    right: 10px;
+    top: 207px;
+    right: -77px;
     width: 20px;
     height: 20px;
      outline: none; 
