--- a/src/Components/Window.css
+++ b/src/Components/Window.css
@@ -7,12 +7,12 @@
     width: 50px;
     border-radius: 50%;
     
+    background-color: #13a044 !important; 
 }
 
 .scroll {
     cursor: pointer;
     text-align: center;
-    background-color: #13a044; 
     color:rgb(17, 172, 110);
     padding: 20px ;
     transition: background-color 0.3s ease;
@@ -23,11 +23,23 @@
 }
 
 .favicn{
+    background: linear-gradient(to right, #2ecc71, #3498db);
     font-size: 15px;
     margin: auto 0;
     /* line-height: 5px; */
     /* display: inline-block; */
     vertical-align: middle;
+    height: 20px;
+    width: 20px;
+    box-shadow: inset -1px -1px 0 rgba(255
+    ,255
+    ,255
+    ,0.1),inset 1px 1px 0 rgba(0,
+    0
+    ,0
+    ,0.05);
+    background: 50%;
+    
     
     }
 
