--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -9,7 +9,7 @@
  /* position:fixed;  */
     bottom: 0;
     width:100%;
-    height:42px; /* Height of the footer */
+    height:50px;
     background-image: linear-gradient(to right, #2ecc71, #3498db);
      /* margin-top: 140px;  */
     padding: 10px;
