--- a/src/Components/Help.css
+++ b/src/Components/Help.css
@@ -27,6 +27,7 @@ html, body {
     background-color: #f2f2f2;
     border: solid #c9c9c9;
     z-index: 3;
+    text-align: center;
 }
 
 .helpbox.display-block {
@@ -39,27 +40,29 @@ html, body {
 
 .helpbox h2 {
     font-size: 20px;
-    padding: 10px;
+    padding: 5px;
     color: #000;
     background-color: green;
 }
 
 .helpbox ul {
     text-align: center;
-    margin: 20px;
-    text-decoration: none;
+    /* margin: 5px; */
     outline-color: rgb(17, 104, 104);
-    list-style-type: none;
-    padding: 0; /* Remove default padding */
+   margin: 0 auto;
+    
+   
+    
 }
 
 .helpbox li {
-    padding: 10px;
-    letter-spacing: 2px;
-    font-size: 13px;
+    padding: 0px;
+    letter-spacing: 1px;
+    font-size: 17px;
     color: white!important;
     margin-right: 0px;
     display: block; 
+    text-decoration: none !important;
 }
 .Helpbutton{
     width: 200px;
@@ -68,4 +71,8 @@ html, body {
   
 
 
+}
+
+.helpbox ul li a {
+    text-decoration: none !important;
 }
