--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -354,7 +354,86 @@ h4{
     margin-bottom: 40px;
 }
 
+.helpcontainer {
+    border-radius: 20px;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* overflow-x: none; */
+    flex-wrap: wrap;
+    flex-direction: column;
+}
 
+.helpbox {
+    position: absolute;
+    left: 84%;
+    width: 200px;  
+ height: 150px;  
+top:180%;
+
+    /* background-color: #f2f2f2; */
+    /* border:  1px solid #1e622f; */
+    z-index: 3;
+    text-align: center;
+}
+
+.helpbox.display-block {
+    display: block !important;
+}
+
+.display-none {
+    display: none !important;
+}
+
+.helpbox h2 {
+    font-size: 20px;
+    padding: 3px;
+    color: #000;
+    /* background-color: green; */
+}
+
+.helpbox ul {
+    text-align: center;
+    /* margin: 5px; */
+    /* outline-color: rgb(17, 104, 104); */
+   
+    
+   
+    
+}
+
+.helpbox li {
+    padding: 0px;
+    letter-spacing: 1px;
+    font-size: 17px;
+    /* color: white!important; */
+    margin-right: 0px;
+    display: block; 
+    text-decoration: none !important;
+    margin: 0px;
+   
+}
+.Helpbutton{
+    width: 120px!important;
+    height: 25px;
+    border-radius: 10px;
+    /* margin-top: 100px; */
+  
+  
+  
+
+
+}
+
+.helpbox ul li a {
+    text-decoration: none !important;
+   
+    margin-left: 0px;
+    margin-right: 0px;
+
+}
     
     
 
