--- a/src/Components/Employer.css
+++ b/src/Components/Employer.css
@@ -57,7 +57,8 @@
     border-radius: 20px;
     text-align: center;
     text-decoration: none;
-    padding: 10px;
-    margin-left: 200px;
+    padding: 0px;
+    margin-left: 50px;
+    margin-top: 0px;
 
 }
