--- a/src/Components/EmployerLogin.css
+++ b/src/Components/EmployerLogin.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    margin-top: 100px;
+    margin-top: 150px;
 }
 label{
  
@@ -21,9 +21,29 @@ label{
  
     width: 70px;
 
-
+}
+select{
+    outline: none;
+    background: #f6f7fb;
+    box-shadow: inset 0 3px 8px rgba(36,
+    37, 42,.1), 0 0 0 6px rg
+    ba(36, 37, 42);
+    border-radius: 4px;
+    transition: all .2s ease-in-out;
+    text-align: left;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: normal;
+    font-size: 14px;
+    color: #4a4949;
+    border-radius: 10px;
+    padding: 5px;
+    width:200px ;
+    height: 250px ;
 
 }
+
 input{
     /* border: none;*/
     outline: none;
@@ -45,6 +65,7 @@ input{
 }
 .employerbtn{
     cursor: pointer;
+    
     -webkit-appearance: button;
     -moz-appearance: button;
     appearance: button;
