--- a/src/Components/Employer.css
+++ b/src/Components/Employer.css
@@ -14,6 +14,7 @@
     background: #f5f7fa;
     cursor: pointer;
     background-attachment: fixed;
+    margin-bottom: 150px;
    
     position: relative; 
 }
@@ -61,4 +62,44 @@
     margin-left: 150px;
     margin-top: 0px;
 
+
+}
+.imagesCont{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+   
+
+}
+.imagesCont h6{
+
+  background: linear-gradient(to right, #2ecc71, #3498db);
+ 
+  text-align: center;
+   background-color: black;
+    box-shadow: 10px 10px 5px;
+    border-radius: 20px;
+    padding:10px ;
+    margin: 30px;
+}
+.images_logo{
+    height: 200px;
+    width:200px ;
+   
+}
+
+
+
+.images_logo img{
+    height: 100%;
+    border-radius: 20px;
+    width: 100%;
+    object-fit: cover;
+    align-items: center;
+    background-color: black;
+    box-shadow: 10px 10px 5px;
+    background: linear-gradient(to right, #2ecc71, #3498db);
 }
