--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -413,6 +413,7 @@ top:180%;
     display: block; 
     text-decoration: none !important;
     margin: 0px;
+    color: #000!important;
    
 }
 .Helpbutton{
