--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -29,7 +29,7 @@
     justify-content: center;
     align-items: center;
     margin-bottom: 150px;
-
+    
   }  
   .formContact input{
     font-size: 18px;
@@ -85,7 +85,12 @@
         
       }
       
-      .contactbtn button{
-     
-
-    }
+      @media screen {
+        .formcontact{
+        
+          padding: 10px;
+         
+       
+        }
+        
+      }
