--- a/src/Components/About.css
+++ b/src/Components/About.css
@@ -1,60 +1,78 @@
-*{
-    padding: 0px;
-    margin: 0px;
+* {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
-.about-container{
+
+.about-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(179vh - 64px);
-    margin-left:30px ;
+    min-height: 100vh;  
+    margin-left: 10px;
     color: #000;
-    }
-.about-section{
-    width: 75%;
-    text-align: self;
+}
+
+.about-section {
+    width: 55%;
+    text-align: left; 
     font-family: 'Poppins', sans-serif;
-    margin-left:10px ;
-    }
-.about-section h1{
-    color:#31846f;
+    margin-left: 10px;
+}
+
+.about-section h1 {
+    color: #31846f;
     font-size: 28px;
-    line-height: 25px;
-    /* letter-spacing: -0.03em; */
+    line-height: 1.2; 
     font-weight: bold;
     margin-bottom: 24px;
-    }
-.about-section p{
-    color:#31846f;
-    font-size: 20px;
-    /* line-height: 24px; */
-    /* opacity: .6; */
-    margin-bottom: 48px;
-    margin-right: 250px;
-    }
-.right-img{
-    position: relative;
-   justify-content: center;
- align-self: center;
- display: flex;
- flex-wrap: wrap;
- flex-direction: row;
-   max-width: 350px;
-   margin-right: 60px;
-   margin-bottom: 290px;
-   box-shadow: 10px 10px 5px black;
-   border-radius: 10px;
-  
+}
 
-    height: 30%;
+.about-section p {
+    color: #31846f;
+    font-size: 15px;
+    margin-bottom: 48px;
+}
+
+.right-img {
+    position: relative;
+    justify-content: center;
+    align-self: center;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    max-width: 30%; 
+    margin-right: 0; 
+    margin-bottom: 50px; 
+    box-shadow: 10px 10px 5px black;
+    border-radius: 20px;
     overflow: hidden;
-   
-    }
-.right-img img{
+}
+
+.right-img img {
     width: 100%;
     height: auto;
-    transition: all .5s ease-in-out;
+    transition: all 0.5s ease-in-out;
     object-fit: cover;
+    left: 20px;
+}
 
+/* Media Query for smaller screens */
+@media only screen and (max-width: 768px) {
+    .about-container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .about-section {
+        width: 90%;
+        margin-left: 0;
+        margin-top: 30px;
+    }
+
+    .right-img {
+        margin-right: 0;
+        width: 100%;
+        max-width: none;
+    }
 }
