--- a/src/Components/Employer.css
+++ b/src/Components/Employer.css
@@ -1,13 +1,13 @@
 
 * {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 .employee-container {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -15,8 +15,7 @@
     cursor: pointer;
     background-attachment: fixed;
     margin-bottom: 150px;
-   
-    position: relative; 
+    position: relative;
 }
 
 .employerPage {
@@ -24,82 +23,104 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    position: relative; 
+    position: relative;
 }
 
 .employerPage img {
     width: 100%;
-    height: 60vh;
+    height: auto;
     object-fit: cover;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
 }
 
 .employercontext {
     position: absolute;
-    top: 10%;
-    left: 350px;
-    right: 0;
-    padding: 50px;
+    top: 55%;
+    left: 10%;
+    right: 10%;
+    padding: 20px;
     color: white;
- 
-}
-.employercontext p{
-    font-size: 20px;
+    border-radius: 10px;
+    text-align: center;
 }
 
-.employer-button{
-    background-color: rgb(49, 89, 150
-    ); 
+.employercontext p {
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.employer-button {
+    background-color: rgb(49, 89, 150);
     border: none;
     color: white;
-    background-color: black;
-    height: 35px! important;
-    width: 150px;
-    border-radius: 20px;
+    height: 35px;
+    width: 35%;
+    border-radius: 30px;
     text-align: center;
     text-decoration: none;
-    padding: 0px;
-    margin-left: 150px;
-    margin-top: 0px;
-
-
+    padding: 10px;
+    /* margin-top: 10px; */
+    cursor: pointer;
 }
-.imagesCont{
+
+.imagesCont {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    height: 100%;
     width: 100%;
-   
-
-}
-.imagesCont h6{
-
-  background: linear-gradient(to right, #2ecc71, #3498db);
- 
-  text-align: center;
-   background-color: black;
-    box-shadow: 10px 10px 5px;
-    border-radius: 20px;
-    padding:10px ;
-    margin: 30px;
-}
-.images_logo{
-    height: 200px;
-    width:200px ;
-   
 }
 
-
-
-.images_logo img{
-    height: 100%;
-    border-radius: 20px;
-    width: 100%;
-    object-fit: cover;
-    align-items: center;
-    background-color: black;
-    box-shadow: 10px 10px 5px;
+.images_logo {
+    width: calc(23.3% - 0px); 
     background: linear-gradient(to right, #2ecc71, #3498db);
+    margin: 20px;
+    overflow: hidden;
+    border-radius: 30px;
+    box-shadow: 10px 10px 8px;
+}
+
+.images_logo img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.imagesCont h6 {
+    background: linear-gradient(to right, #2ecc71, #2586c6);
+    text-align: center;
+    background-color: black;
+    color: rgb(33, 163, 39);
+    border-radius: 20px;
+    padding: 10px;
+    margin-top: 10px;
+}
+
+/* Media Queries */
+@media screen and (max-width: 767px) {
+    .employercontext {
+        left: 5%;
+        right: 5%;
+    }
+
+    .images_logo {
+        width: calc(50% - 20px);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .employercontext {
+        left: 5%;
+        right: 5%;
+        padding: 10px;
+    }
+
+    .employer-button {
+        margin-top: 20px;
+    }
+
+    .images_logo {
+        width: 100%;
+    }
 }
