--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -131,3 +131,36 @@ form {
 .btn:hover{
     background-color: #282929; 
 }
+
+@media screen and (max-width: 767px){
+
+    .registerbutton{
+        width: 250px;
+        /* border-radius: 15px;  */
+        margin-left: 121px!important;
+        }
+         .register {
+            padding-left:0px ;
+            padding-right: 0px;
+            width: 250px;
+            /* margin-bottom: 30px;
+            margin-left: 7px; */
+            /* left: 6px; */
+            top: 20px;
+}
+        }
+    
+       .labelregister{
+        left: 70px;
+       }
+       
+       .heder-register{
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+        margin-left: 30px;
+
+
+
+       }
+    
