--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
   display: flex;
   justify-content: center;
@@ -38,4 +38,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
