--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -7,9 +7,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height:100vh;
+    height:100%;
     width: 100%;
-    background:#f5f7fa;
+    /* background:#f5f7fa; */
     cursor: pointer;
     background-attachment: fixed;
     box-shadow: 10px 10px 10px rgba(26, 24, 24, 0.5);
@@ -36,9 +36,8 @@
 
     .findjob{
         display: flex;
-        justify-content: center;
-        align-items: center;
-        margin: 0 auto;
+        flex-wrap: wrap;
+        justify-content: space-around
     }
    
 
@@ -76,11 +75,12 @@
     transform: translateX(-50%);
       z-index:1;  
     display:flex;
-    justify-content: space-around;
+    justify-content:center;
     width:max-content;
     /* margin-top: 50px; */
     /* border: 1px solid black; */
     text-decoration: none;
+    flex-direction: column;
 
  }
  .social-icons p{
@@ -147,14 +147,18 @@
  
  .images-flex{
      display: flex;
-      opacity: 3;
+      /* opacity: 3; */
     justify-content: space-between;
     align-items:center;
     height:300px;
     width:300px;
+    margin-left:90px ;
+  
+   
+    /* flex-direction: column; */
     /* margin-left: 450px; */
     /* margin-bottom: 120px; */
-    margin-top: 90px;
+    /* margin-top: 90px; */
     /* gap: 20px; */
     
     
@@ -163,14 +167,15 @@
     
 }
 .images-flex img{
-    margin: 90px;
-    margin-right:10px ;
+    margin: 20px;
+    margin-left:30px ;
+    margin-right: 25px;
    
-   
+    
     box-shadow:  10px 10px 10px rgba(0,0,0,.5);
     border-radius: 10px;
     transition: all .5s ease-in-out;
-    justify-self: center;
+    /* justify-self: center; */
     height: 100%;
     width: 100%;
     object-fit: cover;
@@ -196,31 +201,40 @@
   }
   
   .video-overlay h1 {
-    font-size: 3em;
+    
     margin-bottom: 10px;
+    color: #bc2e3c;
   }
   
   .video-overlay strong {
-    font-size: 1.5em;
-    display: block;
+    /* font-size: 1.5em; */
+    display: inline-block;
     margin-bottom: 10px;
+    color:red
   }
   
   .video-overlay span {
     display: block;
     margin-bottom: 10px;
+    color:red
+
+    
   }
   
   .video-overlay hr {
     border: 1.5px solid rgba(19, 187, 100, 0.817);
     width: 50%;
     margin: 10px auto;
+    color:red
+
   }
   
   .video-overlay p {
-    font-size: 2.5em;
+    /* font-size: 2.5em; */
     max-width: 600px;
     margin: 0 auto;
+    color:red
+
   }
   
  
@@ -255,7 +269,7 @@
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 200px;
-    margin-top: 80px;
+    /* margin-top: 80px; */
     
 
 
@@ -357,7 +371,7 @@ h4{
 .helpcontainer {
     border-radius: 20px;
     width: 100%;
-    height: 100vh;
+    /* height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -368,10 +382,12 @@ h4{
 
 .helpbox {
     position: absolute;
-    left: 84%;
-    width: 200px;  
+    right:  30px; 
+    max-width: 200px;
+    /* width: 200px;   */
  height: 150px;  
-top:180%;
+/* top:-10px; */
+ /* bottom: 90px; */
 
     /* background-color: #f2f2f2; */
     /* border:  1px solid #1e622f; */
@@ -380,7 +396,7 @@ top:180%;
 }
 
 .helpbox.display-block {
-    display: block !important;
+    display: inline-block !important;
 }
 
 .display-none {
@@ -421,12 +437,12 @@ top:180%;
     height: 25px;
     border-radius: 10px;
     /* margin-top: 100px; */
-  
-  
-  
-
-
 }
+  
+  
+  
+
+
 
 .helpbox ul li a {
     text-decoration: none !important;
@@ -436,6 +452,95 @@ top:180%;
 
 }
     
+@media screen and (max-width: 767px){
+   .home-container{
+    flex-direction: column;
+    max-width: 300px;
+    min-height: 450px;
+
+   }
+
+  
+   .video-overlay {
+    font-size: 8px;
+   
+    top: 15%;
+    left: 50%;
+    right: 0;
+    bottom: auto;
+    transform: translate(-50%, -25%);
+    position: absolute;
+    z-index: 999;
+    /* background-color: rgba(0, 0, 0, 0.8); */
+    padding: 20px;
+    color:#fff;
+    /* display:none; */
+}
+.social-icons p{
+    /* margin-right:50px ; */
+}.social-icons l1{
     
+    flex-wrap: wrap;
+    flex-direction: column;
+}.discrpition{
+    margin: 20px;
+    line-height: 1.4em;
+    margin-left: 50px;
+}
+}
+
+
+
+.bestjob {
+  text-align: center;
+  font-size: 18px; 
+}
+
+
+@media only screen and (max-width: 768px) {
+  .images-flex {
+    flex-direction: column; 
+    height: auto;
+    width: 250px;
+    /* margin: 10px!important; */
+}
+
+
+
+  .bestjob {
+    margin-left: 0; /* Reset margin for small screens */
+  }
+   h4{
+    font-size: 10px;
+    margin-left: 90px;
+    width: 216px;
+
+  }.discrpition h1{
+    width: 158px!important;
+    margin-left: 55px;
+    
+  }.discrpition p{
+    width: 152px;
+    margin-left: 63px;
+}
+  
+}.helpbox{
+    margin-bottom: 520px;
+    margin-right:100px ;
+/* }.social-icons p{
+    margin-top:670% ;
+    margin-left:50% ;
+  
+} */
+}
+
+
+
+
+    
+    
+ 
+   
+
 
 
