--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -70,8 +70,8 @@
 
  .social-icons{
     position: absolute;
-    top:930px;
-    left: 260px;
+    top:900px;
+    left: 250px;
     transform: translateX(-50%);
       z-index:1;  
     display:flex;
@@ -173,7 +173,7 @@
    
     
     box-shadow:  10px 10px 10px rgba(0,0,0,.5);
-    border-radius: 10px;
+    border-radius: 20px;
     transition: all .5s ease-in-out;
     /* justify-self: center; */
     height: 100%;
@@ -508,10 +508,10 @@ h4{
 
 
   .bestjob {
-    margin-left: 0; /* Reset margin for small screens */
+    margin-left: 0; 
   }
    h4{
-    font-size: 10px;
+    font-size: 22px;
     margin-left: 90px;
     width: 216px;
 
