--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,96 +1,75 @@
-*{
-    padding:0px;
-    margin: 0px;
-    box-sizing: border-box;
+
+
+.contact {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  height: 100vh;
+}
+
+.formContact {
+  flex: 1;
+  max-width: 400px;
+  /* margin-right: 20px; */
+}
+
+.formContact h1 {
+  text-align: center;
+  margin-top: 25px;
+}
+
+.formContact label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.formContact input,
+.formContact textarea {
+  width: auto;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+}
+.formContact textarea {
+  height: 82px!important;
+  padding:30px ;
+}
+
+.contact-btn {
+  text-align: center;
+}
+.contact-btn button{
+  width: 127px !important;
+  height:20px ;
+
+}
+
+.iframe {
+  flex: 1;
+  width: 300px;
+  height: 200px;
+  margin-top: 30px;
+  margin-left: 150px;
+  /* max-width: 300px;
+  min-height: 500px; */
 }
 
 
-.contact{
-    width:100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
+@media screen and (max-width: 768px) {
+  .contact {
+    flex-direction: column;
     align-items: center;
-    /* background:#f2f5fa; */
-   
-}
-
-.contact h1{
-    font-size: 2em;
-    color:#31846f;
-    /* margin-bottom:30px ; */
-
-}
-  .formContact{
-    width:80%;
-    margin-top: 40px;
-    height:auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 150px;
-    
-  }  
-  .formContact input{
-    font-size: 18px;
-    color: #3a3b3c;
-    outline: none;
-    border:none;
-    background:transparent;
-   
-    padding: 10px ;
-     box-shadow: 0px 0px 10px rgba(0,0,0,.1); 
-     width: 75%;
-
-
   }
-  #textarea{
 
-    font-size: 18px;
-    color: #3a3b3c;
-    outline: none;
-    border:none;
-    background:transparent;
-    /* margin: 10px 0; */
-    padding: 10px ;
-     box-shadow: 0px 0px 10px rgba(0,0,0,.1); 
-     width: 75%;
-     height: 100px;
-
+  .formContact {
+    margin-right: 0;
+    margin-bottom: 20px;
   }
-  #textarea textarea {
-    resize: none;
-    height: 100px;
-    
-    }
 
-    .contactbtn{
-        cursor: pointer;
-        transition: all .3s ease-in-out;
-        font-family:'Open Sans', sans-serif;
-        font-weight: bold;
-        letter-spacing:-.5px;
-        line-height: 29px;
-        font-size: 16px;
-        color:#fff;
-        text-transform: uppercase;
-        text-align:center;
-        -webkit-border-radius:4px;
-        -moz-border-radius:4px;
-        border-radius:4px;
-        padding:10px 20px;
-        margin-top:21px ;
-        /* display:inline-block; */
-        
-        
-      }
-      
-      @media screen {
-        .formcontact{
-        
-          padding: 10px;
-         
-       
-        }
-        
-      }
+  .iframe {
+    max-width: 1px;
+    margin-right: 0;
+    /* margin-bottom: 20px; */
+  }
+}
