--- a/src/Components/FindJobs.css
+++ b/src/Components/FindJobs.css
@@ -12,13 +12,16 @@
   }
   
   .seachbar {
+    position: relative;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     background: white;
     padding: 10px;
     border-radius: 5px;
-    margin: 20px 0;
+    margin: 0px 0;
+    flex-direction: column;
+    flex-wrap: wrap;
   }
   
   #search {
@@ -29,6 +32,9 @@
   }
   
   .searchicons {
+    position: absolute;
+    top: 23px;
+  
     cursor: pointer;
   }
   
@@ -44,10 +50,10 @@
   .jobCat {
     position: relative;
     border: 2px solid black;
-    font-weight: bold;
+    /* font-weight: bold; */
     border-radius: 10px;
-    height: 360px;
-    width: 70%;
+    height: 280px;
+    width: 65%;
     max-width: 700px;
     margin: 20px;
   }
@@ -55,13 +61,16 @@
   .jobCat h2,
   .jobCat p {
     margin-left: 80px;
+    margin-top: 10px;
+    font-size: 13px;
   }
   
   .veiwButton,
   .Applybutton {
     position: absolute;
-    top: 90%;
-    width: 80px;
+    top: 80%;
+   
+    width: 70px;
     border-radius: 5px;
     box-shadow: 5px 2px 5px;
   }
@@ -73,14 +82,15 @@
   }
   
   .Applybutton {
-    left: 60%;
+    left: 68%;
   }
   
   /* Media Queries */
   
   @media only screen and (max-width: 768px) {
     .jobCat {
-      width: 90%;
+      width: 65%;
+
     }
   }
   
@@ -100,15 +110,18 @@
       margin-bottom: 10px;
     }
   
-    .veiwButton{
+    
         
-    }
-    .Applybutton {
+  
+    .Applybutton.veiwButton {
       position: absolute;
       width: 20%;
-      /* margin-top: 10px; */
-      margin-bottom: 20px;
       margin: 5px;
+      margin-top: 10px;
+      width: 50px;
+      height: 30px;
+      /* margin-bottom: 20px; */
+    
     }
   }
   
