--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -7,12 +7,12 @@
 
 .footer{
  /* position:fixed;  */
-    bottom: 0;
+    
     width:100%;
-    height:50px;
+    /* height:50px; */
     background-image: linear-gradient(to right, #2ecc71, #3498db);
      /* margin-top: 140px;  */
-    padding: 10px;
+    /* padding: 10px; */
     /* line-height: 60px;
      */
 }
