--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,110 +1,48 @@
 
-    * {
-        padding: 0;
-        margin: 0;
-        box-sizing: border-box;
-    }
-    
-    body {
-        font-family: 'Roboto', sans-serif;
-        background-color: #f5f5f5;
-    }
-    
-    .Header {
-     
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 3px;
-    }
-    
-    .Header nav {
-       
-        width: 100%;
-        height: 60px;
-        background-image: linear-gradient(to right, #2ecc71, #3498db);
-        color:white;
-        background-color: #fff;
-        text-align: center;
-        font-size: 20px;
-        
-        
-    }
-    
-    ul {
-        list-style: none;
-        display: flex;
-        justify-content: space-around;
-        font-weight: bold;
-    }
-    
-    
-    .logo{
-        
-        /* background-image: linear-gradient(to right, #1dc0af,black);   */
-        color: white;
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        height: 100px;
-        width: 100px;
-        padding: 3px;
-        font-weight: 200px;
-        
-        /* border-radius:50% ;  
-        border-bottom: 5px solid black;
-        border-top: 5px solid green;  */
-        
-        
-    }
-    
-   
-    .navs{
-        margin-left: 550px;
-        font-size: 20px;
-        padding: 50px;
-      
-       
-      
-        position: relative;
-        line-height: 60px;
-    }
-    .navcollaps{
-        float:right;
-   
-   
+ body{
+    font: 1em sans-serif;
 
-}
-.navlink{
-    color:#fff;
-    position: relative;
-} 
+ }
+.headerContainer {
+      background-image: linear-gradient(to right, #2ecc71, #3498db);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 50px;
 
-.navlink::after{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    height: 60px; 
-    width: 0;
-     
-    transition: width 0.3s ease-in-out
-}
+    /* color: white; */
+  }
+  
+  .headerContainer span {
+    font-size: 24px;
+    color:white;
+    font-style: italic;
+    margin-left: 8px;
+  }
+  
+  .homeLink ul {
+    list-style: none;
+    display: flex;
+    /* gap: 20px; */
+    margin-right: 16px;
 
-
-.navlink:hover{
-    color: #4923a1;
-    
-}
-.navbar-nav .nav-link {
-    color: white !important;
-}
-      
-.custom-dropdown-title {
-    color:#fff ;
-}
+  }
+  
+  .homeLink li {
+    font-size: 15px;
+  }
+  
+  .homeLink a {
+    text-decoration: none;
+    color: white;
+    margin-left: 20px;
+  }
+  
+  .homeLink a:hover {
+    text-decoration: underline;
    
-        .logohead{
-            margin-left: 17px;
-        }
-        
-   
+  }
+  
+  
+  
