--- a/src/Components/Singlejobs.css
+++ b/src/Components/Singlejobs.css
@@ -9,11 +9,20 @@
     justify-content:center;
     align-items: center;
     flex-direction: column;
-    margin-bottom: 30px;
+    /* margin-bottom: 30px; */
     border:1px solid black;
-    height:100vh;
-    width:95%;
+    height:auto;
+    font-size: 10px;
+    
+    width:100%;
+}
+.singledata{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    font-size:15px ;
 
+    margin-top: 5px;
+}
   
 
-}
