--- a/src/Components/FindJobs.css
+++ b/src/Components/FindJobs.css
@@ -25,16 +25,17 @@
   }
   
   #search {
-    padding: 8px;
+    padding: 5px;
     font-size: 16px;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
+    background-color: rgb(169, 202, 179);
   }
   
   .searchicons {
     position: absolute;
-    top: 23px;
-  
+    top: 22px;
+    right: 42%;
     cursor: pointer;
   }
   
@@ -45,6 +46,7 @@
     align-items: center;
     font-size: 16px;
     font-style: italic;
+
   }
   
   .jobCat {
@@ -56,6 +58,8 @@
     width: 65%;
     max-width: 700px;
     margin: 20px;
+    box-shadow: 10px 2px 10px;
+    color: rgb(42, 45, 47);
   }
   
   .jobCat h2,
@@ -76,13 +80,14 @@
   }
   
   .veiwButton {
-    left: 35%;
+    left: 23%;
     background: red;
     color: black;
   }
   
   .Applybutton {
-    left: 68%;
+    left: 65%;
+    color: #000;
   }
   
   /* Media Queries */
@@ -98,6 +103,8 @@
     .seachbar {
       flex-direction: column;
       text-align: center;
+      width: 198px;
+      margin-left: 116px;
     }
   
     #search {
@@ -106,8 +113,9 @@
     }
   
     .searchicons {
-      margin-top: 10px;
+      margin-top: 13px;
       margin-bottom: 10px;
+      right: 10px;
     }
   
     
