--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -388,6 +388,7 @@ h4{
  height: 150px;  
 /* top:-10px; */
  /* bottom: 90px; */
+ margin-bottom: 448px;
 
     /* background-color: #f2f2f2; */
     /* border:  1px solid #1e622f; */
@@ -436,7 +437,7 @@ h4{
     width: 120px!important;
     height: 25px;
     border-radius: 10px;
-    margin-top: -6px;
+    margin-top: 5px;
 }
   
   
@@ -465,7 +466,7 @@ h4{
     font-size: 8px;
    
     top: 15%;
-    left: 50%;
+    left: 58%;
     right: 0;
     bottom: auto;
     transform: translate(-50%, -25%);
@@ -479,7 +480,7 @@ h4{
 .social-icons p{
     /* margin-right:50px ; */
 }.social-icons l1{
-    
+   
     flex-wrap: wrap;
     flex-direction: column;
 }.discrpition{
@@ -511,7 +512,7 @@ h4{
  } */
 
   .bestjob {
-    margin-left: 86px; 
+    margin-left: 45px; 
   }
    h4{
     font-size: 22px;
@@ -541,7 +542,7 @@ h4{
     font-size: 10px;
 }
 .social-icons p{
-    margin-top: -4%;
+    margin-top: -10%;
    padding-bottom: 20px;
     margin-left:33% ;
     font-size:12px ;
@@ -556,10 +557,10 @@ h4{
     font-size: 10px;
 
 } */
-/* .bestjobs{
-  margin-left:   107px;
+.bestjobs p{
+  margin-left:117px;
 }
-} */
+
 
 
 
