--- a/src/Components/ApplyJobs.css
+++ b/src/Components/ApplyJobs.css
@@ -8,7 +8,7 @@
 .applyJobsContainer{
     height: 100vh;
     width: 100%;
-    margin-top: 160px;
+    margin-top: 96px;
      margin-bottom: 60px; 
   
    
@@ -28,7 +28,7 @@
 }
 .headerapply {
     text-align: center;
-    margin-left: 160px!important;
+    margin-left: 84px;
   
     font-size:20px ;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
