--- a/src/Components/EmployerLogin.css
+++ b/src/Components/EmployerLogin.css
@@ -44,7 +44,7 @@ select{
 
 }
 
-input{
+.Employer-login input{
     /* border: none;*/
     outline: none;
 
@@ -54,7 +54,9 @@ input{
     ba(36, 37, 42);
     border-radius: 4px;
     transition: all .2s ease-in-out;
-    text-align: left;
+    text-align: center;
+    justify-content: center;
+    display: flex;
     font-family: "Roboto", sans-serif;
     font-weight: 400;
     line-height: 1.5;
@@ -91,12 +93,15 @@ input{
 }
 .employe a {
     text-decoration: none !important;
-   
+    color: blue;
   
     list-style-type: none !important;
     height: 250px;
     width: 250px;
 } 
+.Employer-login input{
+    margin-right: 0px!important;
+}
    
 
   
