--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,35 +1,38 @@
-*{
-    padding: 0px;
-    margin:0px;
-    box-sizing: border-box;
-}
 
 
-.footer{
- /* position:fixed;  */
-    
-    width:100%;
-    /* height:50px; */
+.footer {
     background-image: linear-gradient(to right, #2ecc71, #3498db);
-     /* margin-top: 140px;  */
-    /* padding: 10px; */
-    /* line-height: 60px;
-     */
-}
-a{
-    text-decoration: none;
-    /* color: white ; */
-}
-li{
-    list-style:none;
-    color: rgb(25, 165, 67);
+  color: white;
+  padding: 20px;
+  text-align: center;
 }
 
-@media only screen and (max-width: 768px) {
-    .footer ul li a{
-        font-size: 1em!important;
-        }
-       
+ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
 
+li {
+  margin: 0 15px;
+}
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
+@media (max-width: 768px) {
+  .footer {
+    /* padding: 20px 10px; */
+  }
+
+  ul {
+    flex-direction: column;
+  }
+
+  li {
+    margin: 10px 0;
+  }
 }
