--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,48 +1,123 @@
-
- body{
-    font: 1em sans-serif;
-
- }
 .headerContainer {
-      background-image: linear-gradient(to right, #2ecc71, #3498db);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-image: linear-gradient(to right, #2ecc71, #3498db);
+  color: white;
+}
 
-    /* color: white; */
+.headerContainer span {
+  /* font-size: 1.5rem; */
+}
+
+.menuIcon {
+  display: none;
+  cursor: pointer;
+  font-size: 1.5rem;
+}
+
+.linksContainer {
+  display: flex;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  margin-left: 164px;
+}
+
+.search input {
+  padding: 8px;
+  margin-right: 8px;
+  border: 1px solid #ddd; 
+  outline: none;
+  margin-right: 131px;
+  border-radius: 10px;
+}
+
+.searchicon {
+  position: absolute;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-left: 156px;
+  color: green;
+}
+
+.homeLink ul {
+  list-style: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.homeLink li {
+  margin-right: 20px;
+}
+
+.logout {
+  position: absolute;
+  left: 66%;
+  width: 70px;
+ bottom: 93%;
+
+  height: 20px;
+  background-color:white; 
+  color: rgb(25, 168, 0);
+  padding: 4px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* Responsive styles */
+@media screen and (max-width: 768px) {
+  .menuIcon {
+    display: block;
   }
-  
-  .headerContainer span {
-    font-size: 24px;
-    color:white;
-    font-style: italic;
-    margin-left: 8px;
+
+  .linksContainer {
+    flex-direction: column;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    right: 0;
+    /* background-color: #333; */
+    text-align: center;
+    display: none;
   }
-  
+
+  .linksContainer.showMenu {
+    display: flex;
+  }
+
   .homeLink ul {
-    list-style: none;
-    display: flex;
-    /* gap: 20px; */
-    margin-right: 16px;
+    flex-direction: column;
+    padding: 0px;
+  }
+
+  .homeLink li {
+    margin-right: 300px;
+    padding: 0px;
+  }
+  .search input{
+    margin-right: 360px;
+     height: 25px; 
+   
 
   }
-  
-  .homeLink li {
-    font-size: 15px;
+  .searchicon{
+    cursor: pointer;
+    margin-right: 350px;
   }
-  
-  .homeLink a {
-    text-decoration: none;
-    color: white;
-    margin-left: 20px;
-  }
-  
-  .homeLink a:hover {
-    text-decoration: underline;
+  .logout{
+    position: absolute;
+    font-size:14px;
+    top:93%;
+    /* transform: translateY(-50%); */
+    left: 6%;
    
+
   }
-  
-  
-  
+}
