--- a/src/Components/Register.css
+++ b/src/Components/Register.css
@@ -114,7 +114,7 @@ form {
      height: 350px;
      /* margin-bottom: 100px; */
 } 
-.btn{
+.registerbutton{
 
     /* padding: 0.625rem 1rem; */
     background-color: #1a27bc;
@@ -123,7 +123,7 @@ form {
     cursor: pointer;
     transition: background-color 0.3s;
      border-radius: 5px; 
-  
+     margin-right: 125px;
     width: 500px;
     height: 20px;
     
@@ -147,20 +147,29 @@ form {
             margin-left: 7px; */
             /* left: 6px; */
             top: 20px;
+            
 }
         }
     
        .labelregister{
-        left: 70px;
+        margin-right: 150px;
+        
        }
        
        .heder-register{
         display: flex;
         justify-content: center;
-        margin-bottom: 10px;
-        margin-left: 30px;
+        margin-bottom: 27px;
+        /* margin-right: 49px; */
 
+    }
+    .register input{
+        margin-left: 13px;
+        font-size: 14px;
+        
 
-
+       }
+       .registerbutton{
+        margin-right: 10px;
        }
     
